devpod/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suicash
  labels:
    app.kubernetes.io/name: suicash
    app.kubernetes.io/part-of: suicash
