devpod/manifests/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: suicash-ssh
  labels:
    app.kubernetes.io/name: suicash
    app.kubernetes.io/part-of: suicash
    app.kubernetes.io/component: ssh
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: suicash
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30023
      protocol: TCP
